--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,13 +1,211 @@
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
- * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the top of the
- * compiled file, but it's generally better to create a new file per style scope.
- *
- *= require_self
- *= require_tree .
- */
+* {
+    padding: 0;
+    margin: 0;
+}
+
+html {
+    background: white;
+}
+
+body {
+    font: 13pt "Myriad Pro", Helvetica;
+    margin: 5px 10% 0 10%;
+    height: 100%;
+    padding: 30px;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+nav {
+    margin: 10px 0 10px 0;
+}
+
+a {
+    color: #74CC00;
+}
+
+.field {
+    margin-bottom: 10px;
+}
+
+form {
+    margin-bottom: 20px;
+}
+
+textarea {
+    padding: 3px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+input[type=file] {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.flash {
+    padding: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    font-weight: bold;
+}
+
+#notice {
+    background: #85FF00;
+    color: black;
+}
+
+#alert {
+    background: #FF3444;
+}
+
+ul {
+    padding: 15px;
+    list-style-type: none;
+}
+
+ul li {
+    margin-bottom: 10px;
+}
+
+#permissions {
+    border: 1px solid #789B2F;
+}
+#permissions td, #permissions th {
+    padding: 10px;
+    margin: 0;
+    text-align: center;
+}
+
+#permissions thead th {
+    background: #DFFF77;
+    border-bottom: 1px solid #789B2F;
+    padding: 10px;
+}
+
+#permissions tr.odd {
+    background: #F0FF91;
+}
+
+#permissions tr.even {
+    background: #C2EC4B;
+}
+
+ul .state {
+    padding-right: 5px;
+    /*  margin-right: 4em;*/
+}
+
+ul .state {
+    float: left;
+}
+
+.comment {
+    margin: 15px 0 15px 0;
+    padding: 15px;
+    background: #eaeaea;
+    border: 1px solid #e0e0e0;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+a {
+    color: #67A300;
+}
+
+menu {
+    font-size: 75%;
+}
+
+menu, .state, .states {
+    float: right;
+}
+
+section {
+    clear: both;
+}
+
+.state {
+    display: inline;
+    width: 4em;
+    text-align: center;
+    font-weight: bold;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    margin-right: 10px;
+    font-size: 80%;
+    padding: 5px;
+}
+
+#tags {
+    margin-top: 20px;
+}
+
+.tag {
+    background: #232323;
+    -moz-border-radius: 8px;
+    -webkit-border-radius: 8px;
+    color: white;
+    padding: 8px;
+}
+
+.tag a {
+    color: white;
+}
+
+.tag .delete {
+    font-size: 125%;
+    text-decoration: none;
+}
+
+.new_comment {
+    padding: 15px;
+    background: #eaeaea;
+    color: black;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+}
+
+.comment, .new_comment {
+    width: 75%;
+}
+
+table {
+    border-collapse: collapse;
+    border: 1px solid #DFDFDF;
+    background-color: #F9F9F9;
+    width: 100%;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    color: #333;
+    margin: 10px 0 10px 0;
+}
+
+table td, table th {
+    border: 1px solid #DFDFDF;
+    color: #555;
+}
+
+table th {
+    text-shadow: rgba(255, 255, 255, 0.796875) 0px 1px 0px;
+    text-align: left;
+    line-height: 1.3em;
+    font-size: 14px;
+}
+
+table td {
+    font-size: 12px;
+    padding: 4px 7px 2px;
+    vertical-align: top;
+}
+
+nav, #author, #editors {
+    font-size: 14px;
+}
+
+
