--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -4,11 +4,13 @@
   <tr>
     <th>Name</th>
     <th></th>
+    <th></th>
   </tr>
   <% @lists.each do |list| %>
     <tr>
       <td><%= list.name %></td>
       <td><%= link_to "Show", list %></td>
+      <td><%= link_to "Edit", edit_list_path(list) %></td>
     </tr>
   <% end %>
 </table>
