--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,2 +1,3 @@
 <h2>Viewing List: <%= @list.name %></h2>
-<%= link_to "Back", lists_path %>
+<br /><%= link_to "Edit", edit_list_path(@list) %>
+<br /><%= link_to "Back", lists_path %>
