--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -11,6 +11,8 @@
       <td><%= list.name %></td>
       <td><%= link_to "Show", list %></td>
       <td><%= link_to "Edit", edit_list_path(list) %></td>
+      <td><%= link_to "Delete", list_path(list), :method => :delete,
+        :confirm => "Are you sure you want to delete?" %></td>
     </tr>
   <% end %>
 </table>
