--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,3 +1,5 @@
 <h2>Viewing List: <%= @list.name %></h2>
 <br /><%= link_to "Edit", edit_list_path(@list) %>
+<br /><%= link_to "Delete", list_path(@list), :method => :delete,
+  :confirm => "Are you sure you want to delete?" %>
 <br /><%= link_to "Back", lists_path %>
