--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,5 +1,19 @@
 <h2>Viewing List: <%= @list.name %></h2>
-<br /><%= link_to "Edit", edit_list_path(@list) %>
-<br /><%= link_to "Delete", list_path(@list), :method => :delete,
+<h3>Tasks</h3>
+<table>
+  <tr>
+    <th>Title</th>
+    <th>Notes</th>
+  </tr>
+  <% @list.tasks.each do |task| %>
+    <tr>
+      <td><%= task.title %></td>
+      <td><%= simple_format(task.notes) %></td>
+    </tr>
+  <% end %>
+</table>
+<br /><%= link_to "New Task", new_list_task_path(@list) %>
+<br /><%= link_to "Edit Name", edit_list_path(@list) %>
+<br /><%= link_to "Delete List", list_path(@list), :method => :delete,
   :confirm => "Are you sure you want to delete?" %>
 <br /><%= link_to "Back", lists_path %>
