--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -4,16 +4,18 @@
   <tr>
     <th>Title</th>
     <th>Notes</th>
+    <th></th>
   </tr>
   <% @list.tasks.each do |task| %>
     <tr>
       <td><%= task.title %></td>
       <td><%= simple_format(task.notes) %></td>
+      <td><%= link_to "Edit Task", edit_list_task_path(@list, task) %></td>
     </tr>
   <% end %>
 </table>
 <br /><%= link_to "New Task", new_list_task_path(@list) %>
-<br /><%= link_to "Edit Name", edit_list_path(@list) %>
+<br /><%= link_to "Edit List Name", edit_list_path(@list) %>
 <br /><%= link_to "Delete List", list_path(@list), :method => :delete,
   :confirm => "Are you sure you want to delete?" %>
 <br /><%= link_to "Back", lists_path %>
