--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,11 +1,2 @@
 <h2>New Task for <%= @list.name %></h2>
-<%= form_for [@list, @task] do |f| %>
-  <%= f.error_messages :header_message => nil %>
-  <%= f.label :title %>
-  <%= f.text_field :title %>
-  <br />
-  <%= f.label :notes %>
-  <%= f.text_area :notes %>
-  <br />
-  <%= f.submit %>
-<% end %>
+<%= render 'form' %>
